--- a/package.json
+++ b/package.json
@@ -13,10 +13,16 @@
     "nodemon": "^2.0.20"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.1",
+    "connect-flash": "^0.1.1",
+    "connect-mongodb-session": "^3.1.1",
+    "cookie-parser": "^1.4.6",
+    "csurf": "^1.11.0",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "express-handlebars": "^6.0.7",
+    "express-session": "^1.17.3",
     "mongodb": "^5.0.1",
     "mongoose": "^7.0.0",
     "mysql2": "^3.1.2",
